# dbfe

./: .gitignore  LICENSE-BSD3.txt  LICENSE-CC-BY.txt  README.md  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
dbfe/: DistributionBasedFeatureExtractor.py  MultiTypeDBFE.py  __init__.py  functions.py  validation.py
examples/: dbfe_example.ipynb  multitype_dbfe_examples.ipynb
experiments/: experiment_util.py  experiments.ipynb
experiments/data/: get_variant_lengths.py  pam50_geneamps.csv
experiments/data/lung/: labels.tsv
experiments/data/ovarian/: labels.tsv
experiments/results/: Clusters_clustering.csv  Clusters_quantile.csv  clustering_sample.csv  clustering_sample_frac.csv  cv_results.csv  cv_smoothing_sensitivity.csv  feature_importance_results.csv  fracs_counts_sensitivity.csv  holdout_results.csv  human_expert_results.csv  multivariant_holdout_features_formatted.csv  multivariant_holdout_results.csv  multivariant_holdout_results_formatted.csv  multivariant_holdout_results_formatted_F1.csv  multivariant_holdout_results_formatted_Kappa.csv  multivariant_holdout_results_formatted_MCC.csv  multivariant_holdout_results_formatted_Precision.csv  multivariant_holdout_results_formatted_Recall.csv  only_peaks_sensitivity.csv  quantile_sample.csv  quantile_sample_frac.csv  supervised_sample.csv  supervised_sample_frac.csv  time_measurements.csv
tests/: test_distribution_based_features.py
tests/data/: breast_labels.tsv
