[metadata]
name = DBFE
version = 0.1.0
author = Maciej Piernik
author_email = maciej.piernik@mnm.bio
description = Distribution-based feature extraction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MNMdiagnostics/distribution_based_features
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6