[metadata]
name = dbfe
version = 0.2.2
author = Maciej Piernik
author_email = maciej.piernik@mnm.bio
description = Distribution-based feature extraction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MNMdiagnostics/distribution_based_features
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
install_requires =
    numpy
    pandas
    scikit-learn
    seaborn
[options]
packages = find:
python_requires = >=3.6